Add and use PaperTrail gem to version Products.
- add paper_trail gem
- Product has_paper_trail
- list product's Versions
- create Versions controller with revert action

--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -7,15 +7,12 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
-  <h1>Show product</h1>
+  <h1><%= @product.name %></h1>
 </div>
 
 <dl class="dl-horizontal">
   <dt>Sku:</dt>
   <dd><%= @product.sku %></dd>
-
-  <dt>Name:</dt>
-  <dd><%= @product.name %></dd>
 
   <dt>Description:</dt>
   <dd><%= @product.description %></dd>
@@ -30,3 +27,5 @@
   <dd><%= @product.available_on %></dd>
 
 </dl>
+
+<%= render partial: 'versions' %>
