--- a/app/views/products/_versions.html.erb
+++ b/app/views/products/_versions.html.erb
@@ -28,7 +28,7 @@
         <td><%= @product.active %></td>
         <td><%= @product.available_on %></td>
       </tr>
-      <%= content_tag_for(:tr, @product.versions) do |product_version| %>
+      <%= content_tag_for(:tr, @product.versions.reverse) do |product_version| %>
         <% unless product_version.reify.blank? %>
           <td><%= link_to "restore to this version", revert_version_path(product_version), method: :post %></td>
           <td><%= product_version.reify.updated_at %></td>
